<?xml version="1.0"?>
<package>
	<name>hardware_tools_msgs</name>
	<version>0.0.0</version>
	<description>Messages needed by the hardware_tools packages</description>
	<maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>


	<license>GPLv3</license>


	<url type="website">http://wiki.ros.org/serial_to_ros_msgs</url>

	<author>Davide Tateo</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	

</package>